# https://pypi.org/project/setupcfg-generator/
[metadata]
name = travis-cron
version = 2019.4.13
url = https://github.com/looking-for-a-job/travis-cron.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = travis cron

[options]
install_requires = 
	Requests
	click
	columnate
	public
	setuptools
packages = 
	travis_cron
